<resources>
    <string name="app_name">Scan QR Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_control">Điều khiển</string>
    <string name="setting_sound">Âm thanh</string>
    <string name="setting_vibrate">Rung</string>
    <string name="setting_copy">Sao chép vào bộ nhớ tạm</string>
    <string name="setting_chung">Chung</string>
    <string name="setting_ligthdark">Giao diện tối</string>
    <string name="setting_language">Ngôn ngữ</string>
    <string name="setiing_intro">Giới thiệu</string>
    <string name="setting_version">Phiên bản</string>
    <string name="setting_huongdan">Hướng dẫn</string>
    <string name="setting_on">Tắt</string>
    <string name="setting_off">Bật</string>
    <string name="feedback">Phản hồi</string>
    <string name="rating">Xếp hạng ứng dụng này</string>
    <string name="whatdoyouthink">Hãy nói cho tôi biết bạn nghĩ gì</string>
    <string name="sentfeedback">Phản hồi về ứng dụng này</string>
    <string name="sendfeedback">Gửi phản hồi</string>
</resources>