<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Feedback">

    <TextView
        android:layout_marginTop="150dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp"
        android:text="@string/whatdoyouthink"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="16dp" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="@color/primay_icon"
        android:rating="3"
        android:stepSize="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />
    <EditText
        android:id="@+id/ed_feedback"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/sentfeedback"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_feedback"
        android:text="@string/sendfeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>